# pylossmap

./: .gitignore  .readthedocs.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/autoapi/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/blm_type_map/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/data/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/fetcher/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/lossmap/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/metadata/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/plotting/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/timber_vars/: index.doctree
doc/_build/doctrees/autoapi/pylossmap/utils/: index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html  pylossmap.html
doc/_build/html/_modules/pylossmap/: blm_type_map.html  data.html  fetcher.html  lossmap.html  plotting.html  timber_vars.html  utils.html
doc/_build/html/_modules/pylossmap/metadata/: headers.html
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/autoapi/: index.rst.txt
doc/_build/html/_static/: documentation_options.js
doc/_build/html/autoapi/: index.html
doc/_build/html/autoapi/pylossmap/: index.html
notebooks/: 01_creating_lossmaps.ipynb  02_ADT_blowup_lossmaps.ipynb  03_commision_lossmaps.ipynb  ADT_blowup_lossmaps.ipynb  Comission_LM.ipynb  Commission LM.ipynb  Untitled.ipynb  commision_LM.ipynb  creating_lossmaps.ipynb  fetching_data.ipynb
pylossmap/: __init__.py  blm_filters.py  blm_type_map.py  data.py  fetcher.py  loader.py  lossmap.py  plotting.py  timber_vars.py  type_specs.py  utils.py
pylossmap/header_handler/: __init__.py  cli.py  header_maker.py  header_manager.py
pylossmap/metadata/: coll_db.csv  headers.py
pylossmap/metadata/dcum/: 2011_09_01_16_33_17+0200.csv  2011_09_02_09_48_38+0200.csv  2011_11_25_13_32_29+0100.csv  2011_11_29_18_40_59+0100.csv  2012_02_20_10_00_51+0100.csv  2012_04_24_18_13_06+0200.csv  2012_11_06_21_28_50+0100.csv  2013_01_24_08_37_02+0100.csv  2015_02_02_10_00_00+0100.csv  2015_04_15_10_13_14+0200.csv  2015_06_19_16_00_00+0200.csv  2015_08_31_09_00_00+0200.csv  2016_03_14_15_12_48+0100.csv  2016_09_16_02_00_01+0200.csv  2017_01_01_01_00_00+0100.csv  2018_02_01_10_00_00+0100.csv  2018_06_18_11_00_00+0200.csv
pylossmap/metadata/headers/: 2017_01_01_00_00_00+0100.csv  2018_01_01_00_00_00+0100.csv  2018_04_10_00_00_00+0200.csv
tests/: test_blm_type_map.py  test_data.py  test_fetcher.py  test_lossmap.py  test_utils.py
(+20 files in other folders)
