[tool.poetry]
name = "pylossmap"
version = "0.1.0"
description = ""
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
]
readme = "README.md"
repository = 'https://github.com/loiccoyle/pylossmap'

[tool.poetry.dependencies]
python = "^3.6.1"
pytimber = "^3.0.0"
tqdm = "^4.44.1"
scipy = "^1.4.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
jupyter = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
yapf = "^0.29.0"
pytest-cov = "^2.8.1"
m2r = "^0.2.1"
sphinx-rtd-theme = "^0.4.3"
pytest = "^5.4.1"
sphinx-autoapi = "^1.2.1"
pytest-pylint = "^0.15.1"
pytest-watch = "^4.2.0"
pytest-flake8 = "^1.0.4"

[tool.poetry.extras]
notebooks = ["jupyter"]

[tool.poetry.scripts]
header_maker = 'pylossmap.header_handler.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
