[tool.poetry]
name = "pylossmap"
version = "0.1.0"
description = ""
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
]
readme = "README.md"
repository = 'https://github.com/loiccoyle/pylossmap'

[tool.poetry.dependencies]
python = "^3.6.2"
pytimber = "^3.0.0"
tqdm = "^4.44.1"
scipy = "^1.4.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
jupyter = {version = "^1.0.0", optional = true}


sphinx = {version="<3.3.0", optional = true}
sphinx-autoapi = {version="^1.5.0", optional = true}
sphinx-rtd-theme = {version="^0.5.0", optional = true}
m2r2 = {version="^0.2.5", optional = true}

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.4.1"
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.extras]
notebooks = ["jupyter"]
docs = ["sphinx", "sphinx-autoapi", "sphinx-rtd-theme", "m2r2"]

[tool.poetry.scripts]
header_maker = 'pylossmap.header_handler.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
